--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">"Cibo"</string>
+    <string name="app_name">"paesi"</string>
     <string name="pais">Italia</string>
-    <string name="content_comida" translatable="false">Pasta</string>
-    <string name="content_pais" translatable="false">Italia</string>
     <string name="comida">Pasta</string>
 </resources>
