--- a/app/src/main/res/values-ar-rSA/strings.xml
+++ b/app/src/main/res/values-ar-rSA/strings.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">"طعام"</string>
+    <string name="app_name">"الدول"</string>
     <string name="pais">المملكة العربية السعودية</string>
-    <string name="content_pais">المملكة العربية السعودية</string>
-    <string name="content_comida">تورم القدمين</string>
     <string name="comida">تورم القدمين</string>
 </resources>
