--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">"Essen"</string>
+    <string name="app_name">"Länder"</string>
     <string name="pais">Deutschland</string>
-    <string name="content_pais">Deutschland</string>
-    <string name="content_comida">Wurst</string>
     <string name="comida">Wurst</string>
 </resources>
