--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">"Comidas"</string>
+    <string name="app_name">"Paises"</string>
     <string name="pais">Brasil</string>
     <string name="comida">Feijoada</string>
-    <string name="content_comida">Feijoada</string>
-    <string name="content_pais">Brasil</string>
 </resources>
